<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/abstract_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:paddingHorizontal="40dp"
        android:paddingTop="25dp"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/component_add"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/add_contact_details"
            android:fontFamily="@font/roboto_light"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editNumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/number"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editUrl"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/linkedin" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/address"
            android:inputType="text" />


        <Button
            android:id="@+id/addSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:paddingVertical="25dp"
            android:text="@string/save"
            android:textColor="@android:color/white" />


    </LinearLayout>
</ScrollView>