<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="start|center"
        android:padding="5dp"
        android:text="@string/contact_details"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <!--name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:padding="10dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>


    <!--Phone-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:padding="10dp"
            android:text="@string/phone"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>


    <!--Email-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:padding="10dp"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <!--Address-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:padding="10dp"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_txt"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>


    <!--Linkedin-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:padding="10dp"
            android:text="@string/linkedin"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/linkedin_txt"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>